Fixed Scrollbar issue, spacing issues,

--- a/Coming Soon/style.css
+++ b/Coming Soon/style.css
@@ -51,7 +51,7 @@ body{
 .soon {
     position:absolute;
     width: 600px;
-    height: 200px;
+    height: 250px;
     left:0; 
     right:0;
     top:0; 
@@ -60,7 +60,6 @@ body{
     margin:auto;
     max-width:100%;
     max-height:100%;
-    overflow:auto;
 }
 .soon h1 {
 	text-align: center;
@@ -118,7 +117,8 @@ input{
 
 .count {
     position:relative;
-    margin-bottom:4%;
+    margin-bottom:6%;
+    right: 8%;
     font-family: 'Lato';
 }
 .clock {
@@ -127,7 +127,7 @@ input{
 }
 .count h3 {
     position: absolute;
-    right: 28%;
-    top: 110%;
+    right: 1%;
+    top: 60%;
     color: #ffffff;
 }
